# libtxref

./: .gitmodules  CMakeLists.txt  README.md
cmake/: libtxrefConfig.cmake.in
examples/: CMakeLists.txt  c_example.c  c_other_examples.c  c_usage_decoding_example.c  c_usage_encoding_example.c  c_usage_example.c  cpp_example.cpp  cpp_other_examples.cpp  cpp_usage_decoding_example.cpp  cpp_usage_encoding_example.cpp  cpp_usage_example.cpp  txrefDecode.cpp  txrefEncode.cpp
include/libtxref/: libtxref.h  txref.h
libtxref/: CMakeLists.txt  txref.cpp
test/: CMakeLists.txt
test/testtxref/: CMakeLists.txt  test_Txref.cpp  test_Txref_api.cpp  txref_c_api_tests.c
